--- a/ic-base/pom.xml
+++ b/ic-base/pom.xml
@@ -9,9 +9,10 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <profiles>
+    <properties>
         <!--<google.code.version>2.3.2</google.code.version>-->
-    </profiles>
+        <thumbnailator.version>0.4.8</thumbnailator.version>
+    </properties>
 
     <dependencies>
         <!-- google验证码  -->
@@ -99,6 +100,13 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.5</version>
+        </dependency>
+
+        <!-- image -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>${thumbnailator.version}</version>
         </dependency>
     </dependencies>
 
